<resources>
    <string name="app_name">Klearn</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_menu">Menu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="news_feeds_toggle_array">
        <item>Yesterday</item>
        <item>Today</item>
        <item>Most popular</item>
    </string-array>
    <string-array name="favourites_toggle_array">
        <item>Questions</item>
        <item>Posts</item>
        <item>Articles</item>
    </string-array>
    <string-array name="interests_array">
        <item>Aptitude</item>
        <item>Current Affairs</item>
        <item>Politics</item>
        <item>Indian History</item>
        <item>India</item>
        <item>Entertainment</item>
        <item>Economics</item>
        <item>Business</item>
        <item>Information &amp; Technology</item>
        <item>Mathematics</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_feed">News feeds</string>
    <string name="fav">Favourites</string>
    <string name="menu">Menu</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra dolor ac risus fermentum vehicula. Pellentesque semper a leo in pharetra. Praesent mollis viverra lobortis. Nulla ac lectus non justo consequat luctus. Nam tincidunt congue consectetur. Ut tincidunt porttitor tellus, id molestie magna dapibus in. Suspendisse sed ante vel nulla laoreet rutrum id in ante. Nunc sagittis ligula non varius dictum. Duis fermentum fringilla neque, at eleifend est consequat in. Donec ac mollis neque. Sed vel nulla sed libero pellentesque sagittis porttitor vel sem. Nulla pellentesque turpis eget ante pretium convallis.</string>
    <string name="lorem_ipsum_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra dolor ac risus fermentum vehicula. Pellentesque semper a leo in pharetra. Praesent mollis viverra lobortis.</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="no_connection">No connection!</string>
    <string name="join_klearn_academy_using_social_login">Join Klearn Academy using social login.</string>
    <string name="register">REGISTER</string>
    <string name="log_in">LOG IN</string>
    <string name="register_success_verify_email">Your account has been created and we have sent you a verification link to your registered mailId, please verify your emailId before login.</string>
    <string name="acknowledgement_message">Thank you for choosing Klearn Academy, Keep learning!</string>
    <string name="success">Success!</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="_continue">CONTINUE</string>
    <string name="invalid_mail_id">Oops! Looks like email Id is invalid.</string>
    <string name="invalid_password">Password must be alphanumeric with minimum 6 characters, one upper case and one special character.</string>
    <string name="some_error_occurred">Oops! Some error occurred, please try again.</string>
    <string name="invalid_phone">Invalid phone number!</string>
    <string name="empty_password">Password can not be empty!</string>
    <string name="nav_from_login_to_register"><![CDATA[Don’t have an account? <b><u>REGISTER</u></b>]]></string>
    <string name="nav_from_register_to_login"><![CDATA[Already have an account? <b><u>LOG IN</u></b>]]></string>
    <string name="view_terms_conditions"><![CDATA[By Joining Klearn Academy, I agree to <b><u>Terms &amp; Conditions.</u></b>]]></string>
    <string name="back_online">Back online.</string>
    <string name="help_us_choosing_the_feed_type">Help us choosing the feed type.</string>
    <string name="create_new_post">Create new post</string>
    <string name="title_activity_text_editor">TextEditorActivity</string>
    <string name="hint_post_title_fragment">eg. US announcement brings relief for Indian Techies.</string>
    <string name="title">Title</string>
    <string name="attach">Attach</string>
    <string name="attach_image_header_text">Attach image to your post.</string>
    <string name="preview">Preview</string>
</resources>
