<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.kortain.klearn.fragments.ChooseFeedType">

    <TextView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView11"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/create_new_post"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/cf_nav_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_white"
        android:backgroundTint="@color/colorWhite" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView10"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/help_us_choosing_the_feed_type"
        android:textAlignment="center"
        android:textColor="@color/colorBackgroundPrimary"
        android:textSize="20sp" />

    <com.kortain.klearn.widgets.Spinner
        android:id="@+id/cf_feed_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        app:arrowTint="@color/colorWhite" />

    <Button
        android:id="@+id/cf_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_button_primary_gradient"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/_continue"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/cf_nav_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@mipmap/send" />

</RelativeLayout>
