<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.kortain.klearn.fragments.AttachFeedImages">


    <ImageView
        android:id="@+id/if_nav_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_white"
        android:backgroundTint="@color/colorWhite" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/if_nav_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@mipmap/attach_image" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView11"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/attach_image_header_text"
        android:textAlignment="center"
        android:textColor="@color/colorBackgroundPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/if_attach_image_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_button_primary_gradient"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <Button
        android:id="@+id/if_attach_image_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_primary_gradient"
        android:text="@string/attach"
        android:textAllCaps="false"
        android:textColor="@color/colorBackgroundPrimary" />

    <LinearLayout
        android:id="@+id/if_preview_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/if_attach_image_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_bacground_primary_round_corner"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/if_attached_image"
            android:layout_width="76dp"
            android:layout_height="76dp"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/splash_bg"
            android:scaleType="centerCrop"/>

        <ProgressBar
            android:id="@+id/upload_image_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:padding="0dp"
            android:indeterminate="true"
            android:layout_marginBottom="-10dp"
            android:indeterminateTint="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>
